Fixes layout issues. - Fixes scrolling layout issues in firefox. - Fixes loading not always being centered in chrome and devices. - Removes workaround setting height to 0. Now flex is working correctly and taking full space correctly.
There are some important rules in order to make the layout work in different browsers:
Rules in Chrome:
- Requires the <body> to have layout="column" and [ layout-fill or flex ]. Otherwise is not going to respect ms-content scroll regions.
- Cannot handle more than one nested div with usage of layout-fill like this:
<div layout="column" layout-fill>
  <div layout="column" layout-fill>
Otherwise it won't use the entire space for any child with flex.

Rules in Firefox:
- Requires that for any md-content that requires scrolling, parents that contain layout=column and flex must be md-content and not divs. Otherwise it won't use the entire space for any child with flex.

--- a/www/modules/recall/views/Index.scss
+++ b/www/modules/recall/views/Index.scss
@@ -1,14 +1,16 @@
+/* min small devices break for responsive design */
+$break-small: 600px;
+$max-width: 960px;
+
 .recall.index {
     md-content {
         background: lighten(lightgrey, 10%);
 
-        > div {
-            max-width: 960px;
-            margin: auto;
+        .detail-result {
+            @media screen and (min-width: $break-small) {
+                margin: auto;
+            }
+            max-width: $max-width;
         }
-    }
-
-    .result {
-        height: 0px; // Setting this makes sure the content shows scroll
     }
 }
